Evaluation fertig, Schluss begonnen

--- a/Bibliothek/Bibliothek.bib
+++ b/Bibliothek/Bibliothek.bib
@@ -300,6 +300,19 @@
 	file = {Kühl et al. - 2009 - Handbuch Methoden der Organisationsforschung quan.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\AH89ZLJC\\Kühl et al. - 2009 - Handbuch Methoden der Organisationsforschung quan.pdf:application/pdf}
 }
 
+@techreport{hart_nasa_1986,
+	title = {{NASA} {Task} {Load} {Index} ({TLX}). {Volume} 1.0; {Paper} and {Pencil} {Package}},
+	url = {https://ntrs.nasa.gov/search.jsp?R=20000021488},
+	abstract = {This booklet contains the materials necessary to collect subjective workload assessments with the NASA Task Load Index. This procedure for collecting workload ratings was developed by the Human Performance Group at NASA Ames Research Center during a three year research effort that involved more than 40 laboratory. simulation. and inflight experiments. Although the technique is still undergoing evaluation. this booklet is being distributed to allow other researchers to use it in their own experiments. Comments or suggestions about the procedure would be greatly appreciated. This package is intended to fill a "nuts and bolts" function of describing the procedure. A bibliography provides background information about previous empirical findings and the logic that supports the procedure.},
+	urldate = {2019-01-17},
+	author = {Hart, Sandra G.},
+	month = jan,
+	year = {1986},
+	keywords = {bibliographies, collection, human performance, ratings, simulation, workloads},
+	annote = {Document ID: 20000021488; Subject Category: MAN/SYSTEM TECHNOLOGY AND LIFE SUPPORT; Financial Sponsor: NASA Ames Research Center; Moffett Field, CA United States; Organization Source: NASA Ames Research Center; Moffett Field, CA United States; Description: 26p; In English},
+	file = {NASA NTRS Full Text PDF:C\:\\Users\\Fabian\\Zotero\\storage\\ZI9NVM57\\Hart - 1986 - NASA Task Load Index (TLX). Volume 1.0\; Paper and .pdf:application/pdf;Snapshot:C\:\\Users\\Fabian\\Zotero\\storage\\8DQ6B5WN\\search.html:text/html}
+}
+
 @article{rottenburg_feldforschung_nodate,
 	title = {Feldforschung in {Unternehmen} - {Ethnographische} {Explorationen} in der eigenen {Gesellschaft}},
 	url = {http://www.academia.edu/33484063/Feldforschung_in_Unternehmen_-_Ethnographische_Explorationen_in_der_eigenen_Gesellschaft},
@@ -560,6 +573,19 @@
 	year = {1991},
 	keywords = {NASA-TLX},
 	pages = {17--33}
+}
+
+@misc{rauer_quantitative_2011,
+	title = {Quantitative {Usablility}-{Analysen} mit der {System} {Usability} {Scale} ({SUS})},
+	url = {https://blog.seibert-media.net/blog/2011/04/11/usablility-analysen-system-usability-scale-sus/},
+	abstract = {Neben qualitativen Usability-Analysen wie User-Tests oder systematischen Expertenanalysen haben in der Usability-Forschung auch quantitative Erhebungen sowohl ihre Daseinsberechtigung als auch Aussagekraft. Eine solche quantitative Methode ist die System Usability Scale (SUS), die heute zu den etablierten und anerkannten Verfahren in der Nutzerforschung gehört. Mithilfe der SUS werden Daten erhoben, die sich quantitativ auswerten und interpretieren lassen: Nutzer beantworten Fragen zur Anwendung, das Ergebnis ist ein prozentualer Usability-Wert der Applikation.},
+	language = {de-DE},
+	urldate = {2019-01-17},
+	journal = {Nachrichten, Tipps \& Anleitungen für Agile, Entwicklung, Atlassian-Software (JIRA, Confluence, Bitbucket, ...) und Google Cloud},
+	author = {Rauer, Matthias},
+	month = apr,
+	year = {2011},
+	file = {Snapshot:C\:\\Users\\Fabian\\Zotero\\storage\\CTXJ7B68\\usablility-analysen-system-usability-scale-sus.html:text/html}
 }
 
 @book{horold_faktor_2015,
