--- a/Kapitel/Kapitel3.tex
+++ b/Kapitel/Kapitel3.tex
@@ -201,7 +201,7 @@ Diese lassen sich wiederum in drei Subskalen unterteilen \cite{gros_bestimmung_2
 	\item Individuelle Merkmale: Frustration
 \end{itemize}
 
-Jede dieser Dimensionen wird auf einer Skala mit 20 Stufen angegeben, die jeweils von \textit{gering} bis \textit{hoch} reicht. Jede Stufe auf der Skala wird mit 5 Punkten gewichtet. Dadurch reicht jede von 0 bis 100 und gibt somit die erfahrene Belastung zu jeder Dimension in Prozent an. Zur Auswertung wird der ungewichtete NASA-TLX verwendet. Dabei werden alle Punkte zusammengezählt und durch die Anzahl der Dimensionen geteilt. Dabei erhält man wieder einen Wert zwischen 0 und 100.
+Jede dieser Dimensionen wird auf einer Skala mit 20 Stufen angegeben, die jeweils von \textit{gering} bis \textit{hoch} reicht. Jede Stufe auf der Skala wird mit 5 Punkten gewichtet. Dadurch reicht jede von 0 bis 100 und gibt somit die erfahrene Belastung zu jeder Dimension in Prozent an. Zur Auswertung wird der ungewichtete NASA-TLX verwendet. Dabei werden alle Punkte zusammengezählt und durch die Anzahl der Dimensionen geteilt \cite{hart_nasa_1986}. Dabei erhält man wieder einen Wert zwischen 0 und 100.
 
 Die originale Version des NASA-TLX sieht eine Gewichtung der einzelnen Dimensionen vor. Dieses Vorgehen wurde jedoch häufig kritisiert. Nygren \cite{nygren_psychometric_1991} schlägt vor ganz auf die Gewichtung zu verzichten. Pfendler \cite{pfendler_vergleichende_1991} gibt bei der deutschen Version des NASA-TLX an, dass durch Weglassen der Gewichtung des Gesamtwerts eine höhere Reliabilität erzielt werden kann. Deshalb wird auch hier auf die Gewichtung verzichtet.
 
