--- a/Kapitel/Kapitel8.tex
+++ b/Kapitel/Kapitel8.tex
@@ -1,3 +1,18 @@
 \chapter{Fazit}
 
-asdf
+Die Digitalisierung ist in Handwerksbetrieben, sowie in kleinen und mittleren Unternehmen nicht weit fortgeschritten im Vergleich zu ihren großen Konkurrenten, wie in Kapitel 2 gezeigt. KMUs besitzen zwar das Potential dafür, jedoch schenken sie Hindernissen denen sie begegnen, wie hohe Anschaffungs- und Integrationskosten, wenig Know-how und generell das hohe Risiko in den Vordergrund. \\
+Es gibt schon einige digitale Werkzeuge die Prozesse unterstützen. Anwendungen für die Spezifikationserstellung zeichnen sich dabei durch ihr Potential für präzisere Angaben und Zeitersparnis aus. Zusätzlich können damit neue Herangehensweisen durchgeführt werden. \\
+Augmented Reality bietet eine neue Form des Visualisierungswerkzeug, da damit nicht nur ein Bild, wie bisher üblich, betrachtet werden kann, sondern der Nutzer das Ergebnis dreidimensional vor sich sieht und betrachten kann. Das erleichtert es ihm, sich Dinge vorzustellen.
+
+Kapitel 3 beschreibt die verwendeten Methoden. Mit einer Fokusgruppe und Ethnographie werden Daten aus dem Feld des Handwerks erhoben und so Ansatzpunkte für eine AR Applikation gefunden. Diese wird daraus durch gestaltungsorientierte Forschung umgesetzt. Zur Evaluation werden wirtschaftspsychologisch getestete Fragen in einem Fragebogen, sowie ein Interview verwendet.
+
+Die Handwerker, welche in der Fokusgruppe, beschrieben in Kapitel 4, zusammenkamen, waren von der Technologie Augmented Reality sehr begeistert. Sie testeten Datenbrillen und diskutierten anschließend über deren Einsatzmöglichkeiten. Dabei zeigte sich, dass Kundengespräche und die Beratung ein großes Problem für die Handwerker darstellen. AR hat ihrer Meinung nach Potential dabei als Visualisierungswerkzeug zu unterstützen und auch Messungen zu vereinfachen. Die getesteten Datenbrillen, darunter auch die Microsoft HoloLens, empfanden sie jedoch als nicht robust genug für den Einsatz auf Baustellen.
+
+Die Ethnographie brachte hervor, dass die meisten Fliesenlegeraufgaben schnell und präzise durch Augenmaß und Routine durchführbar sind. Es zeigte sich jedoch, dass der Handwerker beim Verlegen der Fliesen durch die Notwendigkeit eine Orientierungslinie anzuzeichnen immer wieder aus dem Arbeitsfluss gerissen wurde und so wertvolle Zeit verlor. Zusätzlich gestaltete sich ein Kundengespräch teilweise schwierig, da Kunde und Experte oft aneinander vorbeiredeten und ihre Ideen nicht deutlich machen konnten. Der Kunde zeigte wenig Vorstellungskraft und konnte für sich kein Bild des Ergebnisses erzeugen. Das erschwert es festzuhalten, was genau geplant ist und einen eindeutigen Vertrag aufzusetzen.
+
+Kapitel 6 zeigt den Entwicklungsweg einer AR Applikation für die Microsoft HoloLens, um vorher genannte Probleme zu lösen. Diese kann den Boden abstecken und virtuell Fliesen darauf verlegen. Dabei bestimmt sie die Maße des Raums und die benötigten Fliesen automatisch. Ein blaues Raster, welches auf den Boden projiziert wird, soll das Verlegen der Fliesen unterstützen. Regelmäßige Tests mit verschiedenen Personen zeigten, dass diese Aufgaben mithilfe von AR erledigt werden können. Mit der erstellten Applikation lässt sich ein Szenario für Fliesenleger nachspielen.
+
+Dieses wurde in Kapitel 7 mit zehn Handwerkern nachgespielt und evaluiert. Die Applikation bekam dabei eine gute bis exzellente Gebrauchstauglichkeitswertung. Die Arbeitsbelastung stuften die Handwerker als mäßig ein. Dabei hatten die älteren Probanden mehr Probleme, als die jüngeren. \\
+Die Unterstützung für das Kundengespräch empfanden sie als gut hilfreich und gaben an diese nutzen zu wollen, wäre diese Applikation für sie verfügbar. \\
+Gemischte Aussagen gaben sie zu dem Verlegeassistenten. Bei diesem bemängelten sie die Genauigkeit, könnten das aber eventuell durch die Nutzung von Lasern ausgleichen. Obwohl hier die Ergebnisse nicht so eindeutig positiv waren wie für das Werkzeug für das Kundengespräch, gaben die Handwerker doch an es gerne nutzen zu wollen. \\
+Insgesamt sehen sie hohes Potential in der Nutzung von AR für Fliesenleger aber auch für weitere Handwerksberufe, sobald die Technik robuster, ausgereifter und genauer ist. Dann könnte die Applikation noch mit anderen Systemen, wie beispielsweise CAD Programmen kombiniert werden, um ihre Effektivität zu steigern.
